--- a/style.css
+++ b/style.css
@@ -185,6 +185,15 @@ h1 {
 #wager3:hover {
     background-color: lightgrey;
 }
+/* #wager1:active {
+    background-color: lightgrey;
+}
+#wager2:active {
+    background-color: lightgrey;
+}
+#wager3:active {
+    background-color: lightgrey;
+} */
 
 #play {
     display: grid;
