--- a/style.css
+++ b/style.css
@@ -108,9 +108,20 @@ h1 {
     color: red;
 }
 @keyframes scrollSlot {
-    from {transform: translateY(-100%);}
-    to {transform: translateY(100%)}
+    /* 0% {transform: translateY(-105%)};
+    50% {transform: translateY(25%)};    
+    100% {transform: translateY(0%)};     */
+    0% {transform: rotate(2turn) translateY(-105%)};
+    100% {transform: rotate(3turn) translateY(25%)};    
+    /* 100% {transform: rotate(6turn)};     */
 }
+.p.spinners{
+animation-name: scrollSlot; 
+animation-duration: 3s;
+animation-iteration-count: 30;
+animation-fill-mode: unset;
+}
+
 .spinners {
     padding: 20px;
     display: flexbox;
@@ -124,9 +135,6 @@ h1 {
     border-radius: 20%;
     margin: 10px 50px;
     background-color: lightblue;
-    animation-name; scrollSlot: 
-    animation-duration: 3s;
-    animation-iteration-count: 2;
     max-width: 150px;
     max-height: 150px;
 }
