--- a/style.css
+++ b/style.css
@@ -128,7 +128,8 @@ h1 {
     background-color: lightgrey;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-height: 900px),
+       screen and (max-width: 400px) {
     * {
         max-height: 900px;
         align-items: center;
