--- a/style.css
+++ b/style.css
@@ -128,8 +128,7 @@ h1 {
     background-color: lightgrey;
 }
 
-@media screen and (max-height: 900px),
-       screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
     * {
         max-height: 900px;
         align-items: center;
