--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 body {
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr; /* Column ratio 1:2 */
-    grid-template-rows: 1fr 2fr 2fr 2fr 1fr;    /* Row ratio 1:2 */
-    gap: 10px; 
+    grid-template-rows: 0.5fr 2fr 0.5fr 0.5fr 0.5fr;    /* Row ratio 1:2 */
+    gap: 0.25%; 
 
     grid-template-areas:
     ". header header header ."
@@ -26,47 +26,48 @@ body {
 background: linear-gradient(0deg, rgba(27,206,208,1) 15%, rgba(230,120,163,1) 30%, rgba(222,189,35,1) 80%, rgba(246,121,55,1) 100%);
 }
 
-h1 {
+#headline {
     grid-area: header;
-    text-align: center;
-    /* margin-top: 2rem; */
-    /* margin-bottom: 2rem; */
+    display: flex;
+    justify-content: center; /* Centers the text horizontally */
+    align-items: flex-end; /
 }
 
 .board {
     grid-area: boardGrid;
     display: grid;
-    /* font-size: 1rem; */
-    grid-gap: 1rem;
-    width: 100%; 
+    grid-gap: 1%;
+    width: 100%;
     height: 100%;
     grid-template-areas:
-    "winnings winLose purse"
-    "spin1 spin2 spin3"
-    "wager1 wager2 wager3"
-    ". play .";
-    grid-template-columns:repeat(3, 1fr);
-    grid-template-rows: .5fr 1fr .5fr 1fr;
+        "winnings winLose purse"
+        "spin1 spin2 spin3"
+        "wager1 wager2 wager3"
+        ". wager ."
+        ". play .";
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 0.5fr 1fr 0.5fr 0.5fr 0.5fr;
     background-color: rgb(255, 213, 213);
     border-radius: 5%;
     margin: auto;
-    justify-content: center;
-    align-items: center;
+    place-items: center; /* Centers both horizontally and vertically */
     box-shadow: 0px 0px 20px 5px;
     place-self: center;
+    padding: 10px;
 }
 
 .cells {
     background-color: whitesmoke;
     border-color: black;
-    border: .125rem;
+    border: 1px;
     border-style: solid;
     border-radius: 20%;
+    padding: 5%;
 }
 #winnings, #purse {
     grid-area: winnings;
     /* margin: 3.125rem; */
-    /* padding: .625rem; */
+    /* padding: 5%; */
     /* height: 40%; */
 }
 #purse {
@@ -74,12 +75,12 @@ h1 {
 }
 #play  {
     grid-area: play;
-    /* padding: .625rem; */
+    /* padding: 5%; */
     /* margin: 1rem .938rem .938rem; */
 }
 #currentWager {
-    grid-area: play;
-    /* padding: .625rem; */
+    grid-area: wager;
+    /* padding: 5%; */
     /* margin: -100px .938rem .938rem;     */
 }
 
@@ -100,15 +101,20 @@ h1 {
 }
 
 .spinners {
-    /* padding: 1.25rem; */
+    padding: 1%;
+    /* place-self: center; */
     border-color: black;
-    border: .125rem;
+    border-width: 1px;
     border-style: solid;
     border-radius: 20%;
     /* margin: .625rem 3.125rem; */
     background-color: lightblue;
-    max-width: 9.375rem;
-    max-height: 9.375rem;
+
+    width: 95%;
+    height: 95%;
+
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #spin1 {
@@ -123,12 +129,12 @@ h1 {
 
 .bets {
     border-color: black;
-    border: .125rem;
+    border-width: 1px;
     border-style: solid;
     border-radius: 20%;
     /* margin: .625rem; */
     /* width: 6.5rem; */
-    /* padding: 1rem; */
+    padding: 5%;
     /* height: 3.2rem; */
     place-self: center;
 }
@@ -145,7 +151,17 @@ h1 {
     background-color: lightgrey;
 }
 
-@media screen and (max-width: 400px) {
+img {
+    width: 100%; /* Make image responsive within the container */
+    height: 100%; /* Maintain aspect ratio */
+    display: block; /* Remove any inline spacing */
+}
+
+@media screen and (max-width: 1000px) {
+    
+}
+
+/* @media screen and (max-width: 400px) {
     * {
         max-height: 900px;
         align-items: center;
@@ -211,6 +227,6 @@ h1 {
         order: 7;
         margin-top: 0px; 
     }
-}
+} */
 
 
