--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
     text-align: center;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     margin: auto;
     /* margin-bottom: 5rem; */
     background: rgb(27,206,208);
